--- a/Rmarkdown/Project2.Rmd
+++ b/Rmarkdown/Project2.Rmd
@@ -1248,16 +1248,15 @@ Overall
 
 # Random Forest 
 
-<<<<<<< HEAD
 ```{r}
 library(pacman)
-=======
+```
+
 ## Load the data
 
 ```{r}
 #train <- read.csv("../data/train.csv", stringsAsFactors = TRUE)
 #test <- read.csv("../data/test.csv", stringsAsFactors = TRUE)
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
 ```
 
 ## Train a Random Forest, tuning mtry and splitrule
@@ -1269,19 +1268,13 @@ cv_control <- trainControl(method="cv",
                      savePredictions = TRUE,
                      summaryFunction = twoClassSummary,
                      num = 5)
-<<<<<<< HEAD
-=======
 
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
 rf_grid <- expand.grid(
   mtry = 4:8,
   splitrule = c("gini","extratrees", "hellinger"),
   min.node.size = c(1)
 )
-<<<<<<< HEAD
-=======
 
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
 fitRF <- train(y ~ ., 
                data = train, 
                method = "ranger", 
@@ -1298,39 +1291,31 @@ I chose to tune 2 hyper parameters for Random Forest
 2. splitrule which determines the rule used for the actual splitting based on the above predictors
 Note: I set min.node.size to 1 as appropriate for classification
 
-<<<<<<< HEAD
-# Performance on Training Set
-=======
+
 ## Performance on Training Set
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
 
 ```{r}
 plot(fitRF)
 confusionMatrix(fitRF)
 ```
-<<<<<<< HEAD
 
-=======
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
 Optimizing for ROC, the winning parameters are an mtry of 5 predictors considered at each split, and the Hellinger split rule.  It's interesting that Hellinger won. I found some papers suggesting Hellinger handles imbalanced data well; being insensitive to skew.*
 * CITATION: https://www3.nd.edu/~nchawla/papers/DMKD11.pdf
 * CITATION: https://medium.com/@evgeni.dubov/classifying-imbalanced-data-using-hellinger-distance-f6a4330d6f9a
 
-<<<<<<< HEAD
-# Performance on Test Set
-=======
+
 ## Performance on Test Set
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
+
 
 ```{r}
 fitRF.predictions.raw <- predict(fitRF, newdata = test, type="raw")
 fitRF.predictions.prob <- predict(fitRF, newdata = test, type="prob")
-confusionMatrix(fitRF.predictions.raw, test$y, positive="yes")
+
+confusionMatrix(fitRF.predictions.raw, test$y)
 ```
 
 Using the default cutoff, our random forest gets a test accuracy of 0.9161, with Sensitivity 0.4953 and Specificity 0.9688.
 
-<<<<<<< HEAD
 # ROC Curve and Optimal Cutoff
 
 ```{r warning=F, message=F}
@@ -1351,13 +1336,16 @@ plot.roc(res.roc, print.auc = TRUE, print.thres = "best")
 #...or similar
 
 #ROCR - trying to get in same format for overlay below
-#results.rf<-prediction(fitRF.predictions.raw, test$y,label.ordering=c("no","yes"))
-#roc.complex = performance(results.complex, measure = "tpr", x.measure = "fpr")
-#plot(roc.complex,colorize = TRUE)
-#abline(a=0, b= 1)
+pred.rf <- prediction(fitRF.predictions.prob[,2],test$y)
+roc.perf_rf = performance(pred.rf, measure = "tpr", x.measure = "fpr")
+auc.rf <- performance(pred.rf, measure = "auc")
+auc.rf <- auc.rf@y.values
+plot(roc.perf_rf)
+abline(a=0, b= 1)
+text(x = .40, y = .6,paste("AUC = ", round(auc.rf[[1]],3), sep = ""))
 ```
 The most balanced cutoff for this model is 0.117, which gives 
-=======
+
 ## ROC Curve and Optimal Cutoff
 
 ```{r warning=F, message=F}
@@ -1381,7 +1369,6 @@ predicted.classes.balanced <- factor(
 confusionMatrix(predicted.classes.balanced, test$y, positive="yes")
 ```
 
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
 
 
 # Model Comparison 
@@ -1393,13 +1380,9 @@ graphics.off()
 plot(roc.step,col="orange")
 plot(roc.complex,col = "blue", add = TRUE)
 plot(roc.perf_step2, col="red", add = TRUE)
-<<<<<<< HEAD
-#plot(res.roc, col = "green", add = TRUE)
-legend("bottomright",legend=c("Stepwise Logistic Regression","Complex Model", "LDA", "Random Forest"),col=c("orange","blue","red"),lty=1,lwd=1)
-=======
-plot(roc.randomforest, col="purple", add = TRUE)
-legend("bottomright",legend=c("Stepwise Logistic Regression","Complex Model", "LDA", "Random Forest"),col=c("orange","blue","red","purple"),lty=1,lwd=1)
->>>>>>> 703ac4b87e75e904081c7f856340ff881d8f91af
+plot(roc.perf_rf, col = "green", add = TRUE)
+#plot(roc.randomforest, col="purple", add = TRUE)
+legend("bottomright",legend=c("Stepwise Logistic Regression","Complex Model", "LDA", "Random Forest"),col=c("orange","blue","red","green"),lty=1,lwd=1)
 abline(a=0, b= 1)
 ```
 
